# Rag-Benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.claude/rules/: benchmark-filter-confound.md  graphiti-benchmark-filter-confound.md  graphiti-bulk-no-invalidation.md  graphiti-contradiction-detection-unreliable.md  graphiti-direct-save-for-known-data.md  graphiti-search-no-auto-temporal-filter.md  (+3 more)
data/: test_cases.json
docs/: architecture-presplit.md
results/: benchmark_20260402_154332.json  benchmark_20260402_225116.json  benchmark_20260402_233601.json  controlled_20260404_042323.json  pipeline_20260404_052835.json  pipeline_presplit_20260406_040512.json
scripts/: explore_graphiti.py  run_parallel.sh  run_pipeline_benchmark.py  run_timeqa_benchmark.py  spike_test.py  trace_scenarios.py
src/: benchmark_runner.py  caching_llm_client.py  checkpoint.py  contradiction_resolver.py  controlled_inserter.py  data_generator.py  evaluator.py  graph_inspector.py  judge.py  judge_cache.py  models.py  pipeline_inserter.py  presplit_inserter.py  reporter.py  search_strategies.py  search_utils.py  sentence_splitter.py  timeqa_adapter.py
tests/: functional-gates.md  quality-gates.md  test_caching_llm_client.py  test_checkpoint.py  test_contradiction_resolver.py  test_data_generator.py  test_evaluator.py  test_experiments.py  test_graph_inspector.py  test_judge.py  test_judge_cache.py  test_models.py  test_reporter.py  test_search_config_builder.py  test_search_strategies.py  test_sentence_splitter.py  test_timeqa_adapter.py
(+27 files in other folders)
