[project]
name = "graphiti-temporal-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "graphiti-core[neo4j]",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
